--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -147,7 +147,7 @@ body {
             font-size: 1rem;
         }
     }
-    &__phone, &__menu {
+    &__phone {
         display: none;
     }
     &__phone {
@@ -175,31 +175,31 @@ body {
             opacity: 1;
         }
     }
-    &__menu {
-        @media (max-width: $r_tab_900) {
-            display: block;
-            width: 4rem;
-            height: 4rem;
-            border-radius: 100%;
-            background-color: $white;
-            background-image: url(../images/menu.svg);
-            background-repeat: no-repeat;
-            background-position: center center;
-            background-size: 1.7rem 1.5rem;
-            position: relative;
-            border: 1px solid $green;
-            transition: .2s;
-            opacity: .8;
-        }
-        @media (max-width: $r_mob_500) {
-            width: 4.5rem;
-            height: 4.5rem;
-            background-size: 2rem;
-        }
-        &:hover {
-            opacity: 1;
-        }
-    }
+    // &__menu {
+    //     @media (max-width: $r_tab_900) {
+    //         display: block;
+    //         width: 4rem;
+    //         height: 4rem;
+    //         border-radius: 100%;
+    //         background-color: $white;
+    //         background-image: url(../images/menu.svg);
+    //         background-repeat: no-repeat;
+    //         background-position: center center;
+    //         background-size: 1.7rem 1.5rem;
+    //         position: relative;
+    //         border: 1px solid $green;
+    //         transition: .2s;
+    //         opacity: .8;
+    //     }
+    //     @media (max-width: $r_mob_500) {
+    //         width: 4.5rem;
+    //         height: 4.5rem;
+    //         background-size: 2rem;
+    //     }
+    //     &:hover {
+    //         opacity: 1;
+    //     }
+    // }
     &__buttons {
         position: relative;
         @media (max-width: $r_desk_hd) {
@@ -271,6 +271,100 @@ body {
 
     }
 
+}
+// Menu-burger
+
+.hamburger-menu {
+    display: none;
+    @media (max-width: $r_tab_900) {
+        display: block;
+    }
+}
+/* скрываем чекбокс */
+#menu__toggle {
+    opacity: 0;
+}
+  /* стилизуем кнопку */
+.menu__btn {
+    display: flex; /* используем flex для центрирования содержимого */
+    align-items: center;  /* центрируем содержимое кнопки */
+    position: relative;
+    top: -1rem;
+    width: 26px;
+    cursor: pointer;
+    z-index: 1;
+}
+  /* добавляем "гамбургер" */
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: $green;
+}
+.menu__btn > span::before {
+    content: '';
+    top: -8px;
+}
+.menu__btn > span::after {
+    content: '';
+    top: 8px;
+}
+  /* контейнер меню */
+.menu__box {
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    top: 0;
+    left: -100%;
+    width: 300px;
+    height: 100%;
+    margin: 0;
+    padding: 80px 0;
+    list-style: none;
+    text-align: center;
+    background-color: #ECEFF1;
+    box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+}
+  /* элементы меню */
+.hamburger-menu__item {
+    display: block;
+    padding: 12px 24px;
+    color: $green;
+    font-size: 20px;
+    font-weight: 600;
+    text-decoration: none;
+}
+.hamburger-menu__item:hover {
+    background-color: #CFD8DC;
+}
+#menu__toggle:checked ~ .menu__btn > span {
+    transform: rotate(45deg);
+}
+#menu__toggle:checked ~ .menu__btn > span::before {
+    top: 0;
+    transform: rotate(0);
+}
+#menu__toggle:checked ~ .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+}
+#menu__toggle:checked ~ .menu__box {
+    visibility: visible;
+    left: 0;
+}
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  transition-duration: .25s;
+}
+.menu__box {
+  transition-duration: .25s;
+}
+.hamburger-menu__item {
+  transition-duration: .25s;
 }
 .close {
     background-image: url(/src/images/close.svg);
@@ -600,9 +694,9 @@ body {
     &__tomato {
         position: absolute;
         border-radius: 100%;// bottom: 26px;
-        left: 35%;
+        left: 29%;
         width: 10.5rem;
-        z-index: -1;
+        z-index: 1;
         // animation: bouncing 0.5s cubic-bezier(0.1,0.25,0.1,1) 0s infinite alternate both;
        animation: tomato-fell 2s linear forwards, tomato-animated 3s ease-out forwards 2s, tomato-rotate 3s ease-out 2s;
        @media (max-width: $r_tab_900) {
