--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -112,7 +112,7 @@ body {
         background-position: center center;
         position: relative;
         border: 1px solid $orange;
-        transition: .2s;
+        transition: transform .9s ease-in-out;
         cursor: pointer;
         @media (max-width: $r_desk_hd) {
             background-color: $white;
@@ -131,6 +131,7 @@ body {
             @media (max-width: $r_desk_hd) {
                 opacity: 1;
                 background-color: $white;
+                transform: rotate(360deg);
             }
         }
     }
@@ -147,7 +148,7 @@ body {
             font-size: 1rem;
         }
     }
-    &__phone {
+    &__phone, &__burger {
         display: none;
     }
     &__phone {
@@ -163,7 +164,7 @@ body {
             background-size: 1.7rem 1.5rem;
             position: relative;
             border: 1px solid $green;
-            transition: .2s;
+            transition: transform .9s ease-in-out;
             opacity: .8;
         }
         @media (max-width: $r_mob_500) {
@@ -172,34 +173,37 @@ body {
             background-size: 1.9rem;
         }
         &:hover {
+            transform: rotate(360deg);
             opacity: 1;
         }
     }
-    // &__menu {
-    //     @media (max-width: $r_tab_900) {
-    //         display: block;
-    //         width: 4rem;
-    //         height: 4rem;
-    //         border-radius: 100%;
-    //         background-color: $white;
-    //         background-image: url(../images/menu.svg);
-    //         background-repeat: no-repeat;
-    //         background-position: center center;
-    //         background-size: 1.7rem 1.5rem;
-    //         position: relative;
-    //         border: 1px solid $green;
-    //         transition: .2s;
-    //         opacity: .8;
-    //     }
-    //     @media (max-width: $r_mob_500) {
-    //         width: 4.5rem;
-    //         height: 4.5rem;
-    //         background-size: 2rem;
-    //     }
-    //     &:hover {
-    //         opacity: 1;
-    //     }
-    // }
+    &__burger {
+        @media (max-width: $r_tab_900) {
+            display: block;
+            width: 4rem;
+            height: 4rem;
+            border-radius: 100%;
+            background-color: $white;
+            background-image: url(../images/menu.svg);
+            background-repeat: no-repeat;
+            background-position: center center;
+            background-size: 1.7rem 1.5rem;
+            position: relative;
+            border: 1px solid $green;
+            transition: transform .9s ease-in-out;
+            opacity: .8;
+            cursor: pointer;
+        }
+        @media (max-width: $r_mob_500) {
+            width: 4.5rem;
+            height: 4.5rem;
+            background-size: 2rem;
+        }
+        &:hover {
+            transform: rotate(360deg);
+            opacity: 1;
+        }
+    }
     &__buttons {
         position: relative;
         @media (max-width: $r_desk_hd) {
@@ -272,100 +276,87 @@ body {
     }
 
 }
-// Menu-burger
 
-.hamburger-menu {
-    display: none;
-    @media (max-width: $r_tab_900) {
+.burger {
+    &__modal {
+        width: 100%;
+        height: 100%;
+        display: none;
+        &.active {
+            @media (max-width: $r_tab_900) {
+                display: block;
+            }
+        }
+    }
+    &__overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        z-index: 1;
+        background-color: rgba($green, .6);
+    }
+    &__window {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 45vw;
+        height: 100vh;
+        z-index: 2;
+        border: 1px solid $green;
+        background-color: rgba($white, .8);
+    }
+    &__wrapper {
+        position: relative;
+        padding: 4.3rem 1.6rem;
+    }
+    &__close {
+        background-image: url(/src/images/close.svg);
+        border: none;
+        background-color: transparent;
+        background-size: cover;
+        background-repeat: no-repeat;
         display: block;
+        width: 2.5rem;
+        height: 2.5rem;
+        position: absolute;
+        top: 2rem;
+        right: 2rem;
+        cursor: pointer;
+    }
+    &__menu {
+        list-style-type: none;
+        display: flex;
+        justify-content: space-between;
+        margin: 40px 0 0;
+        flex-direction: column;
+        padding-left: 0;
+        align-items: flex-start;
+        gap: 1.6rem;
+    }
+    &__item {
+        width: 100%;
+    }
+    &__link {
+        text-decoration: none;
+        font-size: 2.8rem;
+        font-family: $font-cormorant;
+        color: rgba($green, 0.7);
+        &:hover {
+            color: $green;
+        }
+        &:active {
+            color: $green;
+        }
     }
 }
-/* скрываем чекбокс */
-#menu__toggle {
-    opacity: 0;
+body {
+    &.lock {
+        overflow-y: hidden;
+    }
 }
-  /* стилизуем кнопку */
-.menu__btn {
-    display: flex; /* используем flex для центрирования содержимого */
-    align-items: center;  /* центрируем содержимое кнопки */
-    position: relative;
-    top: -1rem;
-    width: 26px;
-    cursor: pointer;
-    z-index: 1;
-}
-  /* добавляем "гамбургер" */
-.menu__btn > span,
-.menu__btn > span::before,
-.menu__btn > span::after {
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    background-color: $green;
-}
-.menu__btn > span::before {
-    content: '';
-    top: -8px;
-}
-.menu__btn > span::after {
-    content: '';
-    top: 8px;
-}
-  /* контейнер меню */
-.menu__box {
-    display: block;
-    position: fixed;
-    visibility: hidden;
-    top: 0;
-    left: -100%;
-    width: 300px;
-    height: 100%;
-    margin: 0;
-    padding: 80px 0;
-    list-style: none;
-    text-align: center;
-    background-color: #ECEFF1;
-    box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
-}
-  /* элементы меню */
-.hamburger-menu__item {
-    display: block;
-    padding: 12px 24px;
-    color: $green;
-    font-size: 20px;
-    font-weight: 600;
-    text-decoration: none;
-}
-.hamburger-menu__item:hover {
-    background-color: #CFD8DC;
-}
-#menu__toggle:checked ~ .menu__btn > span {
-    transform: rotate(45deg);
-}
-#menu__toggle:checked ~ .menu__btn > span::before {
-    top: 0;
-    transform: rotate(0);
-}
-#menu__toggle:checked ~ .menu__btn > span::after {
-    top: 0;
-    transform: rotate(90deg);
-}
-#menu__toggle:checked ~ .menu__box {
-    visibility: visible;
-    left: 0;
-}
-.menu__btn > span,
-.menu__btn > span::before,
-.menu__btn > span::after {
-  transition-duration: .25s;
-}
-.menu__box {
-  transition-duration: .25s;
-}
-.hamburger-menu__item {
-  transition-duration: .25s;
-}
+
 .close {
     background-image: url(/src/images/close.svg);
     border: none;
@@ -562,7 +553,7 @@ body {
         text-align: left;
         transition: .2s;
         cursor: pointer;
-        z-index: 100;
+        z-index: 50;
         &::before {
             content: '';
             background-color: $green;
